[gd_scene load_steps=5 format=3 uid="uid://hr76pxvm5b6f"]

[ext_resource type="Script" path="res://classes/water/water_viewport.gd" id="2"]
[ext_resource type="Script" path="res://classes/water/water.gd" id="3"]
[ext_resource type="Material" uid="uid://bm68anaqm7h4x" path="res://classes/water/water_viewport.tres" id="4"]
[ext_resource type="Texture2D" uid="uid://87s4dydtbx0q" path="res://classes/water/water_outline_anim.png" id="6"]

[node name="WaterPolygon" type="Sprite2D"]
z_index = 1
material = ExtResource("4")
script = ExtResource("2")
polygon = PackedVector2Array(0, 0, 32, 0, 32, 32, 0, 32)
outline_texture = ExtResource("6")
water_color = Color(0.501961, 0.670588, 0.862745, 0.498039)

[node name="DetectionArea" type="Area2D" parent="."]
process_mode = 3
z_index = 1
collision_layer = 2147483656
collision_mask = 4
input_pickable = false
gravity_point_center = Vector2(0, 0)
gravity_direction = Vector2(0, 0)
linear_damp = 0.5
script = ExtResource("3")
water_segment_size = 5
surface_wave_properties = {
"height": 1,
"speed": 1,
"width": 32
}

[node name="Collision" type="CollisionPolygon2D" parent="DetectionArea"]
polygon = PackedVector2Array(0, 0, 32, 0, 32, 32, 0, 32)

[node name="SubViewport" type="SubViewport" parent="."]
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(32, 32)
render_target_update_mode = 3

[node name="WaterPolygon" type="Polygon2D" parent="SubViewport"]
polygon = PackedVector2Array(0, 0, 32, 0, 32, 32, 0, 32)

[node name="Splash" type="AudioStreamPlayer2D" parent="."]
bus = &"SFX"

[connection signal="body_entered" from="DetectionArea" to="DetectionArea" method="_on_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="DetectionArea" method="_on_body_exited"]
